--- a/Translations/German/text-misc-change.xml
+++ b/Translations/German/text-misc-change.xml
@@ -6,7 +6,7 @@
 		<Translation/>
 	</Entry>
 	<Entry>
-		<zType>TEXT_BARBARIAN_ADJECTIVE</zType>
+		<zType>TEXT_TRIBE_ADJECTIVE</zType>
 		<Translation>{0,1_BarbarianAdjective}</Translation>
 	</Entry>
 	<Entry>
